@@ -970,9 +970,9 @@ static ZBX_GRAPH_ITEMS* DBget_same_graphitems_for_host(
 
 	for ( i=0; gitems[i].itemid != 0; i++ )
 	{
-		db_items = DBselect("select new.itemid from items new, items dest "
+		db_items = DBselect("select src.itemid from items src, items dest "
 				" where dest.itemid=" ZBX_FS_UI64
-				" and new.key_=dest.key_ and new.hostid=" ZBX_FS_UI64,
+				" and src.key_=dest.key_ and src.hostid=" ZBX_FS_UI64,
 				gitems[i].itemid, dest_hostid);
 
 		if ( (db_item_data = DBfetch(db_items)) )
